# actor-beautifulsoup-scraper

./: .dockerignore  .editorconfig  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENCE  Makefile  README.md  pyproject.toml  requirements-test.txt  requirements.txt
.actor/: Dockerfile  actor.json  input_schema.json
.github/workflows/: lint_and_type_checks.yaml  push_to_apify.yaml  run_checks.yaml  run_code_checks.yaml
src/: __main__.py  dataclasses.py  input_handling.py  main.py  utils.py
