[project]
name = "beautifulsoup-scraper"
version = "0.0.0" # not used by Apify
description = "" # not used by Apify
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apify < 3.0.0",
    "crawlee[beautifulsoup]",
]

[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "types-beautifulsoup4",
]

[tool.ruff]
line-length = 120
include = ["src/**/*.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # This rule may cause conflicts when used with the formatter
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in `__init__`
    "D203",   # One blank line required before class docstring
    "D213",   # Multi-line docstring summary should start at the second line
    "D413",   # Missing blank line after last section
    "EM",     # flake8-errmsg
    "ISC001", # This rule may cause conflicts when used with the formatter
    "TRY003", # Avoid specifying long messages outside the exception class
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401", # Unused imports
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
files = ["src"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
